tag what game it has content for or impacts

--- a/mods.yaml
+++ b/mods.yaml
@@ -10,6 +10,8 @@ mods:
     tags:
       - required
       - pre:eet
+      - bg1
+      - sod
 
   - name: The BG1 NPC Project
     home: https://www.gibberlings3.net/mods/npcs/bg1npc/
@@ -32,6 +34,7 @@ mods:
       - story
       - quest
       - pid
+      - bg1
 
   - name: BG1 NPC Project Music Pack
     home: https://www.gibberlings3.net/subpages/bg1npc/bg1music/
@@ -45,6 +48,7 @@ mods:
       and BG:EE.
     tags:
       - audio
+      - bg1
 
   - name: Auren Aseph Original Soundtrack
     home: https://www.gibberlings3.net/mods/npcs/auren/
@@ -81,6 +85,7 @@ mods:
        through an enemy stronghold? Or while disguised in a drow stronghold?
     tags:
       - qol
+      - bg2
 
   - name: iiItem
     home: https://github.com/btigi/iiItem
@@ -125,13 +130,15 @@ mods:
        organise your inventory and only carry required items around.
     tags:
       - qol
+      - bg2
 
   - name: iiTweak
     home: https://github.com/btigi/iiTweak
     down: https://github.com/btigi/iiTweak/releases
     dist: igi
     desc:
-       iiTweak contains several tweaks and convenience alterations for the Infinity Engine series of games.
+       iiTweak contains several tweaks and convenience alterations for
+       the Infinity Engine series of games.
     tags:
       - tweaks
 
@@ -146,6 +153,7 @@ mods:
        using, rather than as arbitrary choice at level-up.
     tags:
       - feature
+      - bg2
 
   - name: iiProjectileR
     home: https://github.com/btigi/iiProjectileR
@@ -153,7 +161,8 @@ mods:
     dist: igi
     desc:
        Projectile Retrieval is a mod for Infinity Engine games
-       with a simple aim - to allow the player to retrieve projectiles after using them.
+       with a simple aim - to allow the player to retrieve projectiles
+       after using them.
     tags:
       - feature
 
@@ -168,6 +177,7 @@ mods:
     tags:
       - pre:eet
       - combat
+      - bg1
 
   - name: Dark Horizons
     home: https://forums.beamdog.com/discussion/18833/bg-ee-dark-horizons-released
@@ -181,6 +191,7 @@ mods:
       - pre:eet
       - combat
       - story
+      - bg1
 
   - name: The Stone of Askavar
     home: https://forums.beamdog.com/discussion/42168/mod-the-stone-of-askavar-for-totsc-tutu-bgt-and-bg-ee
@@ -190,6 +201,7 @@ mods:
     tags:
       - pre:eet
       - combat
+      - bg1
 
   - name: bg1ub - Unfinished Business
     home: https://github.com/Pocket-Plane-Group/bg1ub/releases
@@ -200,6 +212,7 @@ mods:
     tags:
       - pre:eet
       - story
+      - bg1
 
   - name: Garrick Tales of a Troubador
     home: https://mirandir.baldursgateworld.fr/garrick-tt/
@@ -212,6 +225,7 @@ mods:
       - story
       - quest
       - npc
+      - bg1
 
   - name: Drake
     home: https://artisans-corner.com/drake-npc-for-bgee/
@@ -226,6 +240,7 @@ mods:
       - npc
       - audio
       - pid
+      - bg1
 
   - name: Sirene
     home: https://artisans-corner.com/sirene-npc-for-bgee-and-bgsod/
@@ -233,6 +248,7 @@ mods:
     dist: artisans
     desc: Paladin NPC
     tags:
+      - bg1
       - pre:eet
       - banter
       - story
@@ -258,6 +274,7 @@ mods:
     desc: Rakshasa NPC
     tags:
       - pre:eet
+      - bg1
       - banter
       - story
       - quest
@@ -271,6 +288,7 @@ mods:
     dist: beamdog
     desc: Halfling fighter NPC
     tags:
+      - bg1
       - pre:eet
       - npc
 
@@ -366,6 +384,8 @@ mods:
       with a Bioware NPC, player-initiated dialogues, and custom
       friendship track themes.
     tags:
+      - bg2
+      - tob
       - npc
       - pid
       - audio
@@ -421,6 +441,7 @@ mods:
       a hub for crossmod of future mods for IWD:EE.
     tags:
       - npc
+      - iwd
 
   - name: Crossmod Banter Pack for BG2
     home: https://www.gibberlings3.net/mods/npcs/crossmod/
@@ -432,6 +453,7 @@ mods:
       Shadows of Amn and Throne of Bhaal.
     tags:
       - npc
+      - bg2
 
   - name: Evandra
     home: https://www.gibberlings3.net/mods/npcs/evandra/
@@ -461,6 +483,7 @@ mods:
       compatible with the BG1 NPC Project, though the latter is
       not required.
     tags:
+      - bg1
       - npc
 
   - name: Gavin NPC for BG
@@ -473,7 +496,11 @@ mods:
       found outside the Song of the Morning Temple, near
       Beregost.
     tags:
+      - bg1
       - npc
+      - banter
+      - audio
+      - pid
 
   - name: Gavin NPC for BG2
     home: https://www.gibberlings3.net/mods/npcs/gavin-bg2/
@@ -485,7 +512,11 @@ mods:
       Morninglord of Lathander and can be found in the Temple of
       Ilmater on the roof of the Copper Coronet in the Slums.
     tags:
+      - bg2
       - npc
+      - banter
+      - audio
+      - pid
 
   - name: Glam's NPC Pack
     home: https://www.gibberlings3.net/mods/npcs/glam-npc-pack/
@@ -498,6 +529,7 @@ mods:
       Assassin" and four brand-new party members for BGEE, Tutu,
       BGT, and EET.﻿
     tags:
+      - bg1
       - npc
 
   - name: Grey the Dog
@@ -527,6 +559,7 @@ mods:
       BGII:EE. He is an unkitted elven fighter and can be found
       in the Den of the Seven Vales in Waukeen's Promenade.
     tags:
+      - bg2
       - npc
 
   - name: IWD2 NPC Project
@@ -540,6 +573,7 @@ mods:
       or a custom character and five premade characters to allow
       for interaction within the party.
     tags:
+      - iwd2
       - npc
 
   - name: Keldorn Romance
@@ -550,6 +584,7 @@ mods:
       berelinde's Keldorn Romance introduces a romance for the
       original BioWare NPC Keldorn.
     tags:
+      - bg2
       - npc
 
   - name: Kivan and Deheriana Companions for BG2
@@ -563,6 +598,7 @@ mods:
       the main download package and is no longer available
       separately.
     tags:
+      - bg2
       - npc
 
   - name: Mur'Neth NPC Mod
@@ -575,6 +611,7 @@ mods:
       shapechangers who venerate Ghaunadaur, the evil deity of
       oozes, moulds and the like.
     tags:
+      - bg1
       - npc
 
   - name: Navarra
@@ -589,6 +626,7 @@ mods:
       romance a male who is Elf, Half-elf, Human and of
       non-evil alignment.
     tags:
+      - tob
       - npc
 
   - name: Romantic Encounters (BG)
@@ -604,6 +642,7 @@ mods:
       quests that all deal with true love, fulfilled or
       unfulfilled.
     tags:
+      - bg1
       - npc
 
   - name: Romantic Encounters (BG2)
@@ -618,6 +657,7 @@ mods:
       one-night stand. Or even several nights together - with a
       'morning after' and without. A dream. Or something else?
     tags:
+      - bg2
       - npc
 
   - name: "Sarah NPC Romance Mod for BG2: TOB"
@@ -629,6 +669,7 @@ mods:
       Baldur's Gate II. Sarah also has a romance available for
       female characters and a friendship for any PC.
     tags:
+      - tob
       - npc
 
   - name: Tyris Flare NPC
@@ -657,6 +698,7 @@ mods:
       that was left with nothing but regrets. Listen to him as
       this may be his last chance to find peace.
     tags:
+      - tob
       - npc
 
   - name: Zakrion
@@ -680,6 +722,7 @@ mods:
       This adds a lot of spells, however (for me) it blocked EET
       from installing with an invalid spell id -1 error.
     tags:
+      - bg1
       - pre:eet
       - spells
 
@@ -689,6 +732,10 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - util
 
   - name: Ascension
@@ -697,6 +744,7 @@ mods:
     dist: infinitymods
     desc: ""
     tags:
+      - tob
       - combat
       - story
       - quest
@@ -707,6 +755,7 @@ mods:
     dist: beamdog
     desc: ""
     tags:
+      - tob
       - story
       - npc
 
@@ -715,10 +764,12 @@ mods:
     down: ~
     dist: unearthedarcana
     desc:
-      Alpha quality but works - at the moment for some users, their team
+      At the moment, for some users, their team
       cannot fall below 1 HP, requiring the user to force their own game
       over/failures if desired.
     tags:
+      - alpha
+      - bg1
       - combat
       - items
 
@@ -740,6 +791,10 @@ mods:
     dist: g3
     desc: Gain lore throughout various game activities (read your books)
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - feature
 
   - name: Bubb Remove Stoneskin color
@@ -748,6 +803,10 @@ mods:
     dist: bubb
     desc: Enjoy your fancy colored wizard robes!
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - qol
 
   - name: A7 Achievements
@@ -756,6 +815,10 @@ mods:
     dist: argent77
     desc: Steam overlay achievements, without needing the overlay.
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - feature
 
   - name: Skip Chateau Irenicus
@@ -764,6 +827,7 @@ mods:
     dist: argent77
     desc: Read the name - self explanatory :)
     tags:
+      - bg2
       - qol
 
   - name: IWDification
@@ -772,6 +836,10 @@ mods:
     dist: g3
     desc: Adds Icewind Dale spells/graphics/items into the game.
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - spells
       - items
 
@@ -781,6 +849,10 @@ mods:
     dist: tipun
     desc: Very unique looking GUI - resembles SOD color scheme.
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - gui
 
   - name: LeUI
@@ -789,6 +861,10 @@ mods:
     dist: lefreut
     desc: Clean and crisp GUI - resembles BG2 UI color scheme.
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - gui
 
   - name: EEUITweaks
@@ -797,6 +873,10 @@ mods:
     dist: lefreut
     desc: Adds general UI enhancements, including an auto-roller!
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - gui
       - feature
       - qol
@@ -807,6 +887,10 @@ mods:
     dist: argent77
     desc: Makes some buttons easier to see.
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - gui
       - qol
 
@@ -824,6 +908,7 @@ mods:
     dist: crevsdaak
     desc: Everyone's favorite BG1 wizard is ready to make some goodies.
     tags:
+      - bg1
       - items
       - item:upgrades
 
@@ -917,25 +1002,12 @@ mods:
     dist: beamdog
     desc: ""
     tags:
+      - bg2
 
   - name: Banter Pack
     home: https://github.com/Pocket-Plane-Group/Banter_Pack/releases
     down: ~
     dist: ppg
-    desc: ""
-    tags:
-
-  - name: Romantic Encounters (BG2)
-    home: https://www.gibberlings3.net/files/file/931-romantic-encounters-bg2/
-    down: ~
-    dist: g3
-    desc: ""
-    tags:
-
-  - name: Romantic Encounters (BG)
-    home: https://www.gibberlings3.net/mods/npcs/bg-romantic-encounters/
-    down: ~
-    dist: g3
     desc: ""
     tags:
 
@@ -952,6 +1024,7 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg2
 
   - name: BGQE (BG Quest and Encounters)
     home: https://github.com/Gibberlings3/BG_Quest_And_Encounters/releases
@@ -959,6 +1032,7 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg1
 
   - name: Unfinished Business
     home: https://github.com/Pocket-Plane-Group/UnfinishedBusiness/releases
@@ -966,6 +1040,7 @@ mods:
     dist: ppg
     desc: ""
     tags:
+      - bg1
 
   - name: Imoen Forever
     home: https://www.gibberlings3.net/files/file/1013-imoen-4-ever/
@@ -980,6 +1055,10 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
 
   - name: Transitions
     home: https://www.gibberlings3.net/files/file/1021-transitions/
@@ -987,6 +1066,10 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
 
   - name: Another Fine Hell
     home: https://www.gibberlings3.net/files/file/1034-another-fine-hell/
@@ -994,6 +1077,7 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - sod
 
   - name: The Boareskyr Bridge Scene
     home: https://www.gibberlings3.net/files/file/1033-the-boareskyr-bridge-scene/
@@ -1001,6 +1085,7 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - sod
 
   - name: PPG Quest Pack
     home: https://www.pocketplane.net/quest-pack/
@@ -1015,6 +1100,7 @@ mods:
     dist: g3
     desc: ""
     tags:
+      - bg1
 
   - name: Weasels!
     home: https://downloads.weaselmods.net/download/weasels/
@@ -1022,6 +1108,7 @@ mods:
     dist: weaselmods
     desc: ""
     tags:
+      - bg1
 
   - name: Imoen Romance
     home: http://imoen.blindmonkey.org/downloads.php
@@ -1029,6 +1116,7 @@ mods:
     dist: blindmonkey
     desc: ""
     tags:
+      - bg2
 
   - name: Sellswords
     home: https://github.com/Pocket-Plane-Group/Sellswords/releases
@@ -2409,5 +2497,9 @@ tweaks2:
       intent of giving players a challenge via making gear rare
       (player can specify what percentage).
     tags:
+      - bg1
+      - sod
+      - bg2
+      - tob
       - hard
       - rand
